@@ -20,8 +20,8 @@ import static smf.icdada.RequestType.V904;
 import static smf.icdada.UserJsonUtils.JsonUtil;
 
 public class TheaterCoin {
-    private static final ConcurrentHashMap<Integer, Integer> t7 = new ConcurrentHashMap<>();
-    private static final ConcurrentHashMap<Integer, Integer> t100 = new ConcurrentHashMap<>();
+    private static final ConcurrentHashMap<String, Integer> t7 = new ConcurrentHashMap<>();
+    private static final ConcurrentHashMap<String, Integer> t100 = new ConcurrentHashMap<>();
 
     private static void init() {
         try {
@@ -34,7 +34,7 @@ public class TheaterCoin {
                 JSONObject theaterDefault = new JSONObject();
                 theaterDefault.put("t7", 150000);
                 theaterDefault.put("t100", 1500);
-                for (int userId : getUserList()) {
+                for (String userId : getUserList()) {
                     JSONObject userObject = usersArray.getJSONObject(getIndex(userId));
                     if (!userObject.containsKey("theater")) {
                         userObject.put("theater", theaterDefault);
@@ -59,20 +59,33 @@ public class TheaterCoin {
         }
     }
 
+    public static void single() {
+        Log.v("请输入拓维userId");
+        String userId = smfScanner.String(false, "^.{8,}$");
+        Log.v("请输入V904-t7发包数量");
+        t7.put(userId, smfScanner.Int(false));
+        Log.v("请输入V904-t100发包数量");
+        t100.put(userId, smfScanner.Int(false));
+        theaterMesh(userId);
+        Log.s("刷取完毕，程序退出");
+        System.exit(0);
+    }
+
     public static void measure() {
         init();
-        List<Integer> userIds = getUserList();
-        ExecutorService executorService = Executors.newFixedThreadPool(userIds.size() + 1);
-        for (int userId : userIds) {
+        List<String> userIds = getUserList();
+        ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor();
+        for (String userId : userIds) {
             sleep(100);
-            executorService.submit(() -> {
+            executor.submit(() -> {
                 Log.v("账号:" + userId + " || 已读取，开始执行");
                 Interface(userId);
+                JsonUtil(userId, "activate", false);
             });
         }
-        executorService.shutdown();
+        executor.shutdown();
         try {
-            executorService.awaitTermination(Long.MAX_VALUE, TimeUnit.NANOSECONDS);
+            executor.awaitTermination(Long.MAX_VALUE, TimeUnit.NANOSECONDS);
         } catch (InterruptedException e) {
             e.printStackTrace();
         }
@@ -80,7 +93,7 @@ public class TheaterCoin {
         System.exit(0);
     }
 
-    private static void Interface(int userId) {
+    private static void Interface(String userId) {
         refresh(userId);
         Result uisk = getUisk(userId);
         if (!"banned".equals(uisk.getUi()) && !"banned".equals(uisk.getSk())) {
@@ -91,53 +104,44 @@ public class TheaterCoin {
         }
     }
 
-    private static void theaterMesh(int userId) {
+    private static void theaterMesh(String userId) {
         boolean keepRunning = true;
         while (keepRunning) {
             try {
-                Future<String> futureV303 = Executors.newSingleThreadExecutor().submit(() -> getResponseBody(V303, userId, 10771));
+                Future<String> futureV303 = getExecutor(userId).submit(() -> getResponseBody(V303, userId, 10771));
                 Check.V303 v303 = new Check.V303();
                 v303.setResponseBody(futureV303.get(3, TimeUnit.SECONDS));
                 if (v303.isValid(0)) {
                     keepRunning = false;
-                    ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor();
                     while (t7.get(userId) != 0) {
-                        Future<String> futureT7 = executor.submit(() -> getResponseBody(V904, userId, "7"));
+                        Future<String> futureT7 = getExecutor(userId).submit(() -> getResponseBody(V904, userId, "7"));
                         Check.V904 v904 = new Check.V904();
-                        try {
-                            v904.setResponseBody(futureT7.get(3, TimeUnit.SECONDS));
-                            if (v904.isValid(0)) {
-                                t7.compute(userId, (k, v) -> {
-                                    assert v != null;
-                                    return v - 1;
-                                });
-                                JsonUtil(userId, "theater", theaterObject(t7.get(userId), t100.get(userId)));
-                            }
-                        } catch (Exception ignored) {
-                            refresh(userId);
-                        }
+                        T(userId, futureT7, v904, t7);
                     }
                     while (t100.get(userId) != 0) {
-                        Future<String> futureT100 = executor.submit(() -> getResponseBody(V904, userId, "100"));
+                        Future<String> futureT100 = getExecutor(userId).submit(() -> getResponseBody(V904, userId, "100"));
                         Check.V904 v904 = new Check.V904();
-                        try {
-                            v904.setResponseBody(futureT100.get(3, TimeUnit.SECONDS));
-                            if (v904.isValid(0)) {
-                                t100.compute(userId, (k, v) -> {
-                                    assert v != null;
-                                    return v - 1;
-                                });
-                                JsonUtil(userId, "theater", theaterObject(t7.get(userId), t100.get(userId)));
-                            }
-                        } catch (Exception ignored) {
-                            refresh(userId);
-                        }
+                        T(userId, futureT100, v904, t100);
                     }
-                    JsonUtil(userId, "activate", false);
                 }
             } catch (Exception e) {
                 refresh(userId);
             }
+        }
+    }
+
+    private static void T(String userId, Future<String> futureT, Check.V904 v904, ConcurrentHashMap<String, Integer> t) {
+        try {
+            v904.setResponseBody(futureT.get(3, TimeUnit.SECONDS));
+            if (v904.isValid(0)) {
+                t.compute(userId, (k, v) -> {
+                    assert v != null;
+                    return v - 1;
+                });
+                JsonUtil(userId, "theater", theaterObject(t7.get(userId), t100.get(userId)));
+            }
+        } catch (Exception ignored) {
+            refresh(userId);
         }
     }
 
@@ -146,66 +150,5 @@ public class TheaterCoin {
         theater.put("t7", t7);
         theater.put("t100", t100);
         return theater;
-    }
-
-    public static void theaterMesh() {
-        Log.v("请输入userId:");
-        int userId = smfScanner.Int(false, "^\\d{8,}$");
-        Log.v("请输入V904-t7发包数量");
-        t7.put(userId, smfScanner.Int(false));
-        Log.v("请输入V904-t100发包数量");
-        t100.put(userId, smfScanner.Int(false));
-        boolean keepRunning = true;
-        while (keepRunning) {
-            try {
-                refresh(userId);
-                Future<String> futureV303 = Executors.newSingleThreadExecutor().submit(() -> getResponseBody(V303, userId, 10771));
-                Check.V303 v303 = new Check.V303();
-                try {
-                    v303.setResponseBody(futureV303.get(3, TimeUnit.SECONDS));
-                } catch (Exception ignored) {
-                    refresh(userId);
-                }
-                if (v303.isValid(0)) {
-                    Log.s("V303发送成功，现在开始刷取");
-                    keepRunning = false;
-                    ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor();
-                    while (t7.get(userId) != 0) {
-                        Future<String> futureT7 = executor.submit(() -> getResponseBody(V904, userId, "7"));
-                        Check.V904 v904 = new Check.V904();
-                        try {
-                            v904.setResponseBody(futureT7.get(3, TimeUnit.SECONDS));
-                            if (v904.isValid(0)) {
-                                t7.compute(userId, (k, v) -> {
-                                    assert v != null;
-                                    return v - 1;
-                                });
-                            }
-                        } catch (Exception ignored) {
-                            refresh(userId);
-                        }
-                    }
-                    while (t100.get(userId) != 0) {
-                        Future<String> futureT100 = executor.submit(() -> getResponseBody(V904, userId, "100"));
-                        Check.V904 v904 = new Check.V904();
-                        try {
-                            v904.setResponseBody(futureT100.get(3, TimeUnit.SECONDS));
-                            if (v904.isValid(0)) {
-                                t100.compute(userId, (k, v) -> {
-                                    assert v != null;
-                                    return v - 1;
-                                });
-                            }
-                        } catch (Exception ignored) {
-                            refresh(userId);
-                        }
-                    }
-                    Log.s("刷取完毕，程序退出");
-                    System.exit(0);
-                }
-            } catch (Exception e) {
-                refresh(userId);
-            }
-        }
     }
 }
